# argos-customizations

./: exports.sh
base-station/: .cproject  .project  ARGoSCheckQTOpenGL.cmake  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
base-station/simulator/: base_station_entity.cpp  base_station_entity.h  dynamics2d_base_station_model.cpp  dynamics2d_base_station_model.h  physx_base_station_model.cpp  physx_base_station_model.h  qtopengl_base_station.cpp  qtopengl_base_station.h
controllers/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  OpenGL Vertex Array.html  base_station_obstacleavoidance.cpp  cmake_install.cmake
controllers/OpenGL Vertex Array_files/: embed.js  saved_resource.html  screen.css
controllers/epuck_obstacleavoidance/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  epuck_obstacleavoidance.cpp  epuck_obstacleavoidance.h
controllers/footbot/footbot_diffusion/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
e-footbot/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
e-footbot/control_interface/: ci_battery_sensor.cpp  ci_battery_sensor.h  ci_efootbot_base_ground_sensor.cpp  ci_efootbot_base_ground_sensor.h  ci_efootbot_distance_scanner_actuator.cpp  ci_efootbot_distance_scanner_actuator.h  ci_efootbot_distance_scanner_sensor.cpp  ci_efootbot_distance_scanner_sensor.h  ci_efootbot_encoder_sensor.cpp  ci_efootbot_encoder_sensor.h  ci_efootbot_gripper_actuator.cpp  ci_efootbot_gripper_actuator.h  ci_efootbot_light_sensor.cpp  ci_efootbot_light_sensor.h  ci_efootbot_motor_ground_sensor.cpp  ci_efootbot_motor_ground_sensor.h  ci_efootbot_proximity_sensor.cpp  ci_efootbot_proximity_sensor.h  ci_efootbot_turret_actuator.cpp  ci_efootbot_turret_actuator.h  ci_efootbot_turret_encoder_sensor.cpp  ci_efootbot_turret_encoder_sensor.h  ci_id_sensor.cpp  ci_id_sensor.h  ci_trilaser_sensor.cpp  ci_trilaser_sensor.h
e-footbot/simulator/: battery_sensor.cpp  battery_sensor.h  battery_sensor_equipped_entity.cpp  battery_sensor_equipped_entity.h  dynamics2d_efootbot_model.cpp  dynamics2d_efootbot_model.h  efootbot_base_ground_rotzonly_sensor.cpp  efootbot_base_ground_rotzonly_sensor.h  efootbot_distance_scanner_default_actuator.cpp  efootbot_distance_scanner_default_actuator.h  efootbot_distance_scanner_equipped_entity.cpp  efootbot_distance_scanner_equipped_entity.h  efootbot_distance_scanner_rotzonly_sensor.cpp  efootbot_distance_scanner_rotzonly_sensor.h  efootbot_entity.cpp  efootbot_entity.h  efootbot_gripper_default_actuator.cpp  efootbot_gripper_default_actuator.h  efootbot_light_rotzonly_sensor.cpp  efootbot_light_rotzonly_sensor.h  efootbot_motor_ground_rotzonly_sensor.cpp  efootbot_motor_ground_rotzonly_sensor.h  efootbot_proximity_default_sensor.cpp  efootbot_proximity_default_sensor.h  efootbot_turret_default_actuator.cpp  efootbot_turret_default_actuator.h  efootbot_turret_encoder_default_sensor.cpp  efootbot_turret_encoder_default_sensor.h  efootbot_turret_entity.cpp  efootbot_turret_entity.h  physx_efootbot_model.cpp  physx_efootbot_model.h  qtopengl_efootbot.cpp  qtopengl_efootbot.h
e-pucky/: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.old  Makefile  cmake_install.cmake
e-pucky/control_interface/: ci_battery_sensor.cpp  ci_battery_sensor.h
e-pucky/simulator/: battery_sensor.cpp  battery_sensor.h  battery_sensor_equipped_entity.cpp  battery_sensor_equipped_entity.h  dynamics2d_epucky_model.cpp  dynamics2d_epucky_model.h  epucky_entity.cpp  epucky_entity.h  qtopengl_epucky.cpp  qtopengl_epucky.h  spline.h
experiments/: base-station.argos  diffusion_10.argos  e-footbot.bdb  e-footbot.bo  e-footbot.buzz  epucky-buzz.argos  epucky.argos  footboot-buzz.argos  pucktest.buzz
misc/: experiment_sim.argos.old
misc/id_loop_functions/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  id_qtuser_functions.cpp  id_qtuser_functions.h
swarms/argos/: Graph.graph  crossroads.argos  power-floor.argos  unity.argos
swarms/controllers/buzz/: swarmnetwork.bdb  swarmnetwork.bo  swarmnetwork.bzz
swarms/controllers/buzz/power-floor/: expand.bdb  expand.bo  expand.bzz  run.sh  testhexagon.bdb  (+3 more)
swarms/controllers/cpp/creation_loops/: .cproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  creation_loops.cpp  creation_loops.h
swarms/controllers/cpp/crossroad_loop_footbot/: .cproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  crossroad_loop_footbot.cpp  crossroad_loop_footbot.h
swarms/controllers/cpp/floor_loops/: .cproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  floor_power_functions.cpp  floor_power_functions.h
swarms/controllers/cpp/position_loops/: .cproject  CMakeLists.txt  position_functions.cpp  position_functions.h
swarms/controllers/cpp/tree_loops/: .cproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tree_qt_loops.cpp  tree_qt_loops.h
swarms/misc/: crossroad.xcf
temp/: Graph-old.graph  Graph.graph  diffusion_10.argos  diffusion_buzz.argos  drive.argos  drive.bdb  drive.bo  drive.bzz  drive2.argos  drive_visualization.argos  experiment_forecup.argos  log.txt  swarmnetwork.bdb  swarmnetwork.bo  swarmnetwork.bzz  swarmnetwork2.bdb  swarmnetwork2.bo  swarmnetwork2.bzz  test.text  testexperiment.argos  testhexagon.bdb  testhexagon.bo  testhexagon.bzz  teststig.argos  teststig.bdb  teststig.bo  teststig.bzz
temp/experiments/: a-6-a14-c02-s25  b-7-a14-c02-s25  c-6-a14-c02-s25  c-7-a14-c02-s25  c-8-a14-c02-s25  c-9-a14-c02-s25  d-9-a12-c02-s25
temp/experiments/experiments2/: a-6-a14-c02-s25  b-7-a14-c02-s25
temp/footbot_diffusion/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  efootbot_diffusion.cpp  efootbot_diffusion.h
temp/footbot_diffusion_test/: CMakeCache.txt  CMakeLists.txt  Graph.graph  Makefile  cmake_install.cmake  efootbot_diffusion.cpp  efootbot_diffusion.h  swarmnetwork.bzz
temp/foriv/: Graph.graph  experiment_drones.argos  swarmnetwork.bdb  swarmnetwork.bo  swarmnetwork.bzz
(+20 files in other folders)
